--- a/package.json
+++ b/package.json
@@ -57,6 +57,11 @@
       "last 1 safari version"
     ]
   },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true,
+    "jsxSingleQuote": true
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
