--- a/package.json
+++ b/package.json
@@ -60,7 +60,10 @@
   "prettier": {
     "semi": false,
     "singleQuote": true,
-    "jsxSingleQuote": true
+    "jsxSingleQuote": true,
+    "tabWidth": 4,
+    "printWidth": 90,
+    "embeddedLanguageFormatting": "off"
   },
   "husky": {
     "hooks": {
